Some packages updated (run composer update and npm update) and also works started on software section

--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -27,3 +27,8 @@ code, pre {
 blockquote {
     color: #eee !important;
 }
+
+div.DocSearch-content>ul {
+    @apply .list-disc;
+    padding-left: 20px;
+}
